# improved-barnacle

./: Cargo.toml  improved-barnacle-8f59a53ed37c06f13d204b38d1973b1cdc8eacef7e91630829cb6d1f0255e1a4872ab4fca2efb6d816ec04b0a89ae06f.js  improved-barnacle-8f59a53ed37c06f13d204b38d1973b1cdc8eacef7e91630829cb6d1f0255e1a4872ab4fca2efb6d816ec04b0a89ae06f_bg.wasm  index.html  migrations.toml
src/: app.rs  lib.rs  main.rs
