[package]
edition = "2021"
name = "improved-barnacle"
publish = false
rust-version = "1.72"
version = "0.1.0"

[dependencies]
eframe = {version = "0.25", default-features = false, features = ["default_fonts", "glow", "persistence"]}
egui_extras = {version = "0.25", features = ["image"]}
ehttp = "0.3.1"
image = {version = "0.24", default-features = false, features = ["jpeg", "png"]}
poll-promise = {version = "0.3", default-features = false}
egui = "0.25"
log = "0.4"
serde = {version = "1", features = ["derive"]}

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
turbosql = "0.9.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
turbosql = { git = "https://github.com/trevyn/turbosql", branch = "parse_as_type" }

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
